--- a/src/App.scss
+++ b/src/App.scss
@@ -26,7 +26,7 @@ body {
         background-color: $bgColor;
         border: 2px solid $borderColor;
         cursor: pointer;
-        &:focus:not(.hide) {
+        &:hover {
           background-color: lighten($bgColor, 30%);
         }
       }
